# co2seq

./: .gitignore  LinksForData.md  README.md  app.py  bar.py  columnNames.txt  index.py  manage.py  plants_per_basin.csv  plants_per_basin_function.py  pyproject.toml  questions.md  render.py  test.py  utils.py
CO2Dashboard/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
Data/: CleanedBoreholes.csv  README.txt  Sedimentary_Basins.zip:Zone.Identifier  WellsDataComparison.qgz  columns.xlsx  config.json  emission_05-24-2021.csv  emission_06-10-2021_164726740.csv  facility_06-10-2021_170833518.csv  lightweight_config.json  plants_per_basin.csv
Data/BrineFormations/: Basin_boundary.dbf  Basin_boundary.sbn  Basin_boundary.sbx  Basin_boundary.shp  Basin_boundary.shp.xml  Basin_boundary.shx  LowerK_000_cliparea.dbf  LowerK_000_cliparea.sbn  LowerK_000_cliparea.shp  LowerK_000_cliparea.shp.xml  LowerK_000_cliparea.shx  LowerK_001_depthtobottom.dbf  LowerK_001_depthtobottom.sbn  LowerK_001_depthtobottom.sbx  LowerK_001_depthtobottom.shp  LowerK_001_depthtobottom.shp.xml  LowerK_001_depthtobottom.shx  LowerK_001_depthtotop.dbf  LowerK_001_depthtotop.sbn  LowerK_001_depthtotop.sbx  LowerK_001_depthtotop.shp  LowerK_001_depthtotop.shp.xml  LowerK_001_depthtotop.shx  (+1948 more)
NorthAmerica/: apps.py  views.py
apps/: about.py  seqGraph.py
assets/: basins.geojson
co2Dashboard/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
dash_test/: app.py  test_one.py
homePage/: urls.py  utils.py  views.py
map/: urls.py  util.py  views.py
templates/: base.html  index.html  northAmericanMap.html
(+47 files in other folders)
