[tool.poetry]
name = "co2dashboard"
version = "0.1.0"
description = ""
authors = ["pschassberger <pschassberger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"
plotly = "^4.14.3"
geopandas = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
