[tool.poetry]
name = "co2dashboard"
version = "0.1.0"
description = ""
authors = ["pschassberger <pschassberger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"
plotly = "^4.14.3"
geopandas = "^0.9.0"
django-plotly-dash = "^1.6.4"
channels = "^3.0.3"
daphne = "^3.0.2"
redis = "^3.5.3"
django-redis = "^5.0.0"
channels-redis = "^3.2.0"
bootstrap4 = "^0.1.0"
dash-bootstrap-components = "^0.12.2"
dpd-static-support = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
