#local install of pytest and dash[testing]...sorry

[tool.poetry]
name = "dash_test"
version = "0.1.0"
description = ""
authors = ["pschassberger <pschassberger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^1.20.0"
geopandas = "^0.9.0"
plotly = "^4.14.3"
pandas = "^1.2.4"
dash-bootstrap-components = "^0.12.2"
dash-extensions = "^0.0.55"
cssbeautifier = "^1.13.13"
shapley = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
